# graph_db_demo

./: .gitignore  AI_USAGE.md  CLAUDE.md  Dockerfile  Dockerfile.cli  README.md  config.toml.example  design.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  db.py  logging.py  main.py  models.py  schemas.py  types.py
app/cli/: parse_graph.py
app/services/: graph_service.py
openspec/: project.md
openspec/changes/archive/2026-03-21-add-app-config/: design.md  (+2 more)
openspec/specs/app-config/: spec.md
openspec/specs/cli-xml-parser/: spec.md
openspec/specs/cycle-detection-sql/: spec.md
openspec/specs/graph-query-api/: spec.md
openspec/specs/structured-logging/: spec.md
openspec/specs/test-infrastructure/: spec.md
samples/good/: sample_graph_1.xml  sample_graph_1_input.json  sample_graph_1_output.json  sample_graph_3.xml  sample_graph_3_input.json  sample_graph_3_output.json
samples/invalid/: sample_graph_invalid_1.xml  sample_graph_invalid_2.xml  sample_graph_invalid_3.xml  sample_graph_invalid_4.xml  sample_graph_invalid_5.xml  sample_graph_invalid_6.xml  sample_graph_invalid_7.xml  sample_graph_invalid_8.xml  sample_graph_invalid_9.xml
sql/: find_cycles.sql  insert_graph_with_cycles_1.sql  insert_graph_with_cycles_2.sql  insert_graph_with_cycles_3.sql  migration.sql
tests/: conftest.py
tests/app/: test_api.py  test_config.py  test_logging.py  test_schemas.py
tests/app/cli/: test_parse_graph_cli.py  test_xml_parser.py
tests/app/services/: test_graph_service.py
(+37 files in other folders)
