[project]
name = "graph-query-api"
version = "0.1.0"
description = "FastAPI backend for querying directed weighted graphs stored in PostgreSQL"
requires-python = "==3.12.3"
dependencies = [
    "fastapi==0.135.1",
    "sqlmodel==0.0.37",
    "pydantic==2.12.5",
    "networkx==3.6.1",
    "lxml==6.0.2",
    "click==8.3.1",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.11",
    "uvicorn==0.42.0",
    "structlog==25.2.0",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "httpx==0.28.1",
    "ruff==0.15.7",
    "ty==0.0.24",
]

[project.scripts]
parse-graph = "app.cli.parse_graph:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "httpx==0.28.1",
    "ruff==0.15.7",
    "ty==0.0.24",
    "lxml-stubs>=0.5.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
